--- a/index.html
+++ b/index.html
@@ -8,6 +8,129 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
+
+    <nav class="menu">
+        <ul>
+            <li><a href="#animais">Animais</a></li>
+            <li><a href="#faq">Faq</a></li>
+            <li><a href="#contato">Contato</a></li>
+            <li><a href="#">Dev →</a></li>
+        </ul>
+    </nav>
+
+    <section class="grid-section animais" id="animais">
+        <h1 class="titulo">Animais Fantásticos</h1>
+        <ul>
+            <li><img src="assets/img/imagem1.jpg" alt="animal"></li>
+            <li><img src="assets/img/imagem2.jpg" alt="animal"></li>
+            <li><img src="assets/img/imagem3.jpg" alt="animal"></li>
+            <li><img src="assets/img/imagem4.jpg" alt="animal"></li>
+            <li><img src="assets/img/imagem5.jpg" alt="animal"></li>
+            <li><img src="assets/img/imagem6.jpg" alt="animal"></li>
+        </ul>
+        <div class="animais-descricao">
+            <!--animal1-->
+            <section>
+                <h2>Raposa</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus in minus unde, tenetur mollitia, voluptate nemo laboriosam, provident harum quibusdam reiciendis necessitatibus explicabo eaque? Tenetur.</p>
+
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vel sed dolorem culpa a molestiae voluptate!</p>
+
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum excepturi corrupti officia praesentium officiis hic quaerat maiores nemo beatae sed, sit quia pariatur iure eos odio assumenda dignissimos perspiciatis? Deleniti?</p>
+
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi esse obcaecati sit facilis voluptatem labore? Ex blanditiis eaque ullam accusantium!</p>
+            </section>
+            <!--animal2-->
+            <section>
+                <h2>Esquilo</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus in minus unde, tenetur mollitia, voluptate nemo laboriosam, provident harum quibusdam reiciendis necessitatibus explicabo eaque? Tenetur.</p>
+
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vel sed dolorem culpa a molestiae voluptate!</p>
+
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum excepturi corrupti officia praesentium officiis hic quaerat maiores nemo beatae sed, sit quia pariatur iure eos odio assumenda dignissimos perspiciatis? Deleniti?</p>
+
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi esse obcaecati sit facilis voluptatem labore? Ex blanditiis eaque ullam accusantium!</p>
+            </section>
+            <!--animal3-->
+            <section>
+                <h2>Urso</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus in minus unde, tenetur mollitia, voluptate nemo laboriosam, provident harum quibusdam reiciendis necessitatibus explicabo eaque? Tenetur.</p>
+
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vel sed dolorem culpa a molestiae voluptate!</p>
+
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum excepturi corrupti officia praesentium officiis hic quaerat maiores nemo beatae sed, sit quia pariatur iure eos odio assumenda dignissimos perspiciatis? Deleniti?</p>
+
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi esse obcaecati sit facilis voluptatem labore? Ex blanditiis eaque ullam accusantium!</p>
+            </section>
+            <!--animal4-->
+            <section>
+                <h2>Lobo</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus in minus unde, tenetur mollitia, voluptate nemo laboriosam, provident harum quibusdam reiciendis necessitatibus explicabo eaque? Tenetur.</p>
+
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vel sed dolorem culpa a molestiae voluptate!</p>
+
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum excepturi corrupti officia praesentium officiis hic quaerat maiores nemo beatae sed, sit quia pariatur iure eos odio assumenda dignissimos perspiciatis? Deleniti?</p>
+
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi esse obcaecati sit facilis voluptatem labore? Ex blanditiis eaque ullam accusantium!</p>
+            </section>   
+            <!--animal5-->
+            <section>
+                <h2>Macaco</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus in minus unde, tenetur mollitia, voluptate nemo laboriosam, provident harum quibusdam reiciendis necessitatibus explicabo eaque? Tenetur.</p>
+
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vel sed dolorem culpa a molestiae voluptate!</p>
+
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum excepturi corrupti officia praesentium officiis hic quaerat maiores nemo beatae sed, sit quia pariatur iure eos odio assumenda dignissimos perspiciatis? Deleniti?</p>
+
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi esse obcaecati sit facilis voluptatem labore? Ex blanditiis eaque ullam accusantium!</p>
+            </section>
+            <!--animal5-->
+            <section>
+                <h2>Leão</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus in minus unde, tenetur mollitia, voluptate nemo laboriosam, provident harum quibusdam reiciendis necessitatibus explicabo eaque? Tenetur.</p>
+
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vel sed dolorem culpa a molestiae voluptate!</p>
+
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum excepturi corrupti officia praesentium officiis hic quaerat maiores nemo beatae sed, sit quia pariatur iure eos odio assumenda dignissimos perspiciatis? Deleniti?</p>
+
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi esse obcaecati sit facilis voluptatem labore? Ex blanditiis eaque ullam accusantium!</p>
+            </section>            
+        </div>
+    </section>
+
+    <section class="grid-section faq" id="faq">
+        <h1>FAQ</h1>
+
+        <dl>
+            <dt>Qual a idade dos animais?</dt>
+            <dd>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi veritatis deserunt fugit dolorum corporis unde explicabo autem exercitationem error quae.</dd>
+
+            <dt>Eles são fantásticos?</dt>
+            <dd>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi veritatis deserunt fugit dolorum corporis unde explicabo autem exercitationem error quae.</dd>
+
+            <dt>Qual a diferença?</dt>
+            <dd>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi veritatis deserunt fugit dolorum corporis unde explicabo autem exercitationem error quae.</dd>
+
+            <dt>Como proteger?</dt>
+            <dd>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi veritatis deserunt fugit dolorum corporis unde explicabo autem exercitationem error quae.</dd>
+        </dl>
+    </section>
+
+    <section class="grid-section contato" id="ontato">
+        <h1>Contato</h1>
+        <div class="mapa"><img src="assets/img/mapa.png" alt="mapa"></div>
+        <ul class="dados">
+            <li>contato@animaisfantasticos.com</li>
+            <li>Calle Charrua, 2035</li>
+            <li>Rio de Janeiro</li>
+        </ul>
+    </section>
+
+    <footer class="copy">
+        <p>Testing project</p>
+    </footer>
+
+
     <script src="assets/js/script.js"></script>
 </body>
 </html>
