css menu + main section

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <section class="grid-section animais" id="animais">
         <h1 class="titulo">Animais Fantásticos</h1>
-        <ul>
+        <ul class="animais-lista">
             <li><img src="assets/img/imagem1.jpg" alt="animal"></li>
             <li><img src="assets/img/imagem2.jpg" alt="animal"></li>
             <li><img src="assets/img/imagem3.jpg" alt="animal"></li>
@@ -116,7 +116,7 @@
         </dl>
     </section>
 
-    <section class="grid-section contato" id="ontato">
+    <section class="grid-section contato" id="contato">
         <h1>Contato</h1>
         <div class="mapa"><img src="assets/img/mapa.png" alt="mapa"></div>
         <ul class="dados">
