--- a/index.html
+++ b/index.html
@@ -99,9 +99,8 @@
     </section>
 
     <section class="grid-section faq" id="faq">
-        <h1>FAQ</h1>
-
-        <dl>
+        <h1 class="titulo">FAQ</h1>
+        <dl class="faq-lista">
             <dt>Qual a idade dos animais?</dt>
             <dd>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi veritatis deserunt fugit dolorum corporis unde explicabo autem exercitationem error quae.</dd>
 
@@ -117,7 +116,7 @@
     </section>
 
     <section class="grid-section contato" id="contato">
-        <h1>Contato</h1>
+        <h1 class="titulo">Contato</h1>
         <div class="mapa"><img src="assets/img/mapa.png" alt="mapa"></div>
         <ul class="dados">
             <li>contato@animaisfantasticos.com</li>
