--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         <p>Testing project</p>
     </footer>
 
-
     <script src="assets/js/script.js"></script>
+    <!--script src="assets/js/seletores-dom.js"></!--script-->
 </body>
 </html>
