--- a/index.html
+++ b/index.html
@@ -131,5 +131,8 @@
 
     <script src="assets/js/script.js"></script>
     <!--script src="assets/js/seletores-dom.js"></!--script-->
+    <!--script src="assets/js/seletores-dom-ex.js"></!--script-->
+    <!--script src="assets/js/foreach-arrowfunction.js"></!--script-->
+    <script src="assets/js/foreach-ex.js"></script>
 </body>
 </html>
