--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <li><a href="#animais">Animais</a></li>
             <li><a href="#faq">Faq</a></li>
             <li><a href="#contato">Contato</a></li>
-            <li><a href="#">Dev →</a></li>
+            <li><a href="http://www.tatioliv.live/">Dev →</a></li>
         </ul>
     </nav>
 
@@ -26,7 +26,7 @@
             <li><img src="assets/img/imagem3.jpg" alt="animal"></li>
             <li><img src="assets/img/imagem4.jpg" alt="animal"></li>
             <li><img src="assets/img/imagem5.jpg" alt="animal"></li>
-            <li><img src="assets/img/imagem6.jpg" alt="animal"></li>
+            <li><img src="assets/img/imagem6.jpg" ></li>
         </ul>
         <div class="animais-descricao">
             <!--animal1-->
@@ -133,6 +133,9 @@
     <!--script src="assets/js/seletores-dom.js"></!--script-->
     <!--script src="assets/js/seletores-dom-ex.js"></!--script-->
     <!--script src="assets/js/foreach-arrowfunction.js"></!--script-->
-    <script src="assets/js/foreach-ex.js"></script>
+    <!--script src="assets/js/foreach-ex.js"></!script-->
+    <!--script src="assets/js/classList.js"></!--script-->
+    <script src="assets/js/classList-ex.js"></script>
+
 </body>
 </html>
