--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     <!--script src="assets/js/foreach-ex.js"></!script-->
     <!--script src="assets/js/classList.js"></!--script-->
     <!--script src="assets/js/classList-ex.js"></!--script-->
-    <script src="assets/js/dimensoesDistancias.js"></script>
+    <!--script src="assets/js/dimensoesDistancias.js"></!--script-->
     <script src="assets/js/dimensoesDistancias-ex.js"></script>
 
 </body>
