--- a/index.html
+++ b/index.html
@@ -137,7 +137,8 @@
     <!--script src="assets/js/classList.js"></!--script-->
     <!--script src="assets/js/classList-ex.js"></!--script-->
     <!--script src="assets/js/dimensoesDistancias.js"></!--script-->
-    <script src="assets/js/dimensoesDistancias-ex.js"></script>
+    <!--script src="assets/js/dimensoesDistancias-ex.js"></!--script-->
+    <script src="assets/js/eventos.js"></script>
 
 </body>
 </html>
