traversing-e-manipulacao.js

--- a/index.html
+++ b/index.html
@@ -139,7 +139,8 @@
     <!--script src="assets/js/dimensoesDistancias.js"></!--script-->
     <!--script src="assets/js/dimensoesDistancias-ex.js"></!--script-->
     <!--script src="assets/js/eventos.js"></!--script-->
-    <script src="assets/js/eventos-ex.js"></script>
+    <!--script src="assets/js/eventos-ex.js"></!--script-->
+    <script src="assets/js/traversing-e-manipulacao.js"></script>
 
 </body>
 </html>
