--- a/index.html
+++ b/index.html
@@ -140,7 +140,8 @@
     <!--script src="assets/js/dimensoesDistancias-ex.js"></!--script-->
     <!--script src="assets/js/eventos.js"></!--script-->
     <!--script src="assets/js/eventos-ex.js"></!--script-->
-    <script src="assets/js/traversing-e-manipulacao.js"></script>
+    <!--script src="assets/js/traversing-e-manipulacao.js"></!script-->
+    <script src="assets/js/traversing-e-manipulacao-ex.js"></script>
 
 </body>
 </html>
