--- a/index.html
+++ b/index.html
@@ -92,18 +92,18 @@
 
     <section class="grid-section faq" id="faq">
         <h1 class="titulo">FAQ</h1>
-        <dl class="faq-lista">
+        <dl class="faq-lista js-accordion">
             <dt>Qual a idade dos animais?</dt>
-            <dd>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi veritatis deserunt fugit dolorum corporis unde explicabo autem exercitationem error quae.</dd>
+            <dd>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda iusto fugiat, quam autem quidem, ipsa sit facere iste earum a facilis veniam, voluptates at cumque totam excepturi error minima. Tempore!</dd>
 
             <dt>Eles são fantásticos?</dt>
-            <dd>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi veritatis deserunt fugit dolorum corporis unde explicabo autem exercitationem error quae.</dd>
+            <dd>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum nihil velit quia natus eligendi? Explicabo perferendis sit enim alias laudantium distinctio odit consequatur! Officia laboriosam neque reiciendis molestiae alias veniam?</dd>
 
             <dt>Qual a diferença?</dt>
             <dd>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi veritatis deserunt fugit dolorum corporis unde explicabo autem exercitationem error quae.</dd>
 
             <dt>Como proteger?</dt>
-            <dd>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi veritatis deserunt fugit dolorum corporis unde explicabo autem exercitationem error quae.</dd>
+            <dd>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde sapiente accusantium pariatur aspernatur corrupti ut, aperiam similique, at ab voluptas recusandae sequi non maxime ea voluptatum fugit labore? Non, sequi!</dd>
         </dl>
     </section>
 
