--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </ul>
     </nav>
 
-    <section class="grid-section animais" id="animais">
+    <section class="grid-section animais js-scroll" id="animais">
         <h1 class="titulo">Animais Fantásticos</h1>
         <ul class="animais-lista js-tabmenu">
             <li><img src="assets/img/imagem1.jpg" alt="animal"></li>
@@ -90,7 +90,7 @@
         </div>
     </section>
 
-    <section class="grid-section faq" id="faq">
+    <section class="grid-section faq js-scroll" id="faq">
         <h1 class="titulo">FAQ</h1>
         <dl class="faq-lista js-accordion">
             <dt>Qual a idade dos animais?</dt>
@@ -107,7 +107,7 @@
         </dl>
     </section>
 
-    <section class="grid-section contato" id="contato">
+    <section class="grid-section contato js-scroll" id="contato">
         <h1 class="titulo">Contato</h1>
         <div class="mapa"><img src="assets/img/mapa.png" alt="mapa"></div>
         <ul class="dados">
